--- a/src/index.html
+++ b/src/index.html
@@ -39,23 +39,27 @@
       <img class="profile-image" src="./img/profile-image-edited.jpeg" alt="image"/>
 
       <div class="details">
-        <p>
-          Mobil: <br/>070-877 11 12<br/>
-          E-post: <br/>johsjo@live.com<br/><br/>
-          Födelsedatum: <br/>11 januari 1983<br/>
-          Civilstånd: <br/>Gift, 3 barn.
-        </p>
+        <dl>
+          <dt>Mobil: </dt>
+          <dd>070-877 11 12</dd>
+          <dt>E-post: </dt>
+          <dd>johsjo@johsjo.com</dd>
+          <dt>Födelsedatum: </dt>
+          <dd>11 januari 1983</dd>
+          <dt>Civilstånd: </dt>
+          <dd>Gift, 3 barn</dd>
+        </dl>
       </div>
     </div>
 
     <div class="container">
 
       <div id="profile">
-        <p><strong>Profil</strong>
-          Som person är jag mycket social och positiv. Jag har lätt för att snabbt skapa en bra kontakt med
-          medarbetare. Målinriktat arbetar jag lika gärna självständigt som i grupp och jag får ofta hör att jag är
-          engagerad och initiativrik. Analytisk, noggrann, organiserad, ansvarstagande, ambitiös och lojal är
-          några andra egenskaper som stämmer in på min personlighet.
+        <p>
+          Jag är en social och positiv person som har lätt för att skapa en bra kontakt med mina medarbetare.
+          Jag arbetar målinriktat och fungerar lika bra självständigt som i grupp.
+          Mina kollegor brukar beskriva mig som engagerad och initiativrik. Analytisk, noggrann, organiserad,
+          ansvarstagande, ambitiös och lojal är några andra egenskaper som stämmer in på min personlighet.
         </p>
       </div>
 
@@ -65,32 +69,40 @@
           <th>period</th>
         </tr>
         <tr>
-          <td> Studerande / <a href="http://yhc3l.se/utbildning/systemutvecklare/">Systemutvecklare med Java, C3L</a></td><td class="fixed">2016-08-01 =&gt;<br/>nu</td>
+          <td> Studerande / <a href="http://yhc3l.se/utbildning/systemutvecklare/">Systemutvecklare med Java, C3L</a></td>
+          <td class="fixed">2016-08-01 =&gt;<br/>nu</td>
         </tr>
         <tr>
-          <td>Nätverkssäkerhet, NTI</td><td class="fixed">2015-08-10 =&gt;<br/>2015-10-16</td>
+          <td>Nätverkssäkerhet, NTI</td>
+          <td class="fixed">2015-08-10 =&gt;<br/>2015-10-16</td>
         </tr>
         <tr>
-          <td>Webserverprogrammering 1 med PHP, Jensen</td><td class="fixed">2014-10-13 =&gt;<br/>2014-12-19</td>
-        </tr>
-
-        <tr>
-          <td>Programmering 2 med C#, NTI.</td><td>2014-05-26=&gt;<br/>2014-08-01</td>
+          <td>Webserverprogrammering 1 med PHP, Jensen</td>
+          <td class="fixed">2014-10-13 =&gt;<br/>2014-12-19</td>
         </tr>
         <tr>
-          <td>Programmering 1 med Java, Jensens </td><td>2013-10-14 =&gt;<br/>2013-12-20</td>
+          <td>Programmering 2 med C#, NTI.</td>
+          <td>2014-05-26=&gt;<br/>2014-08-01</td>
         </tr>
         <tr>
-          <td>VBA 1Grunder i VBA hos Addskills Datum:</td><td> 28-30 jan 2012</td>
+          <td>Programmering 1 med Java, Jensens </td>
+          <td>2013-10-14 =&gt;<br/>2013-12-20</td>
         </tr>
         <tr>
-          <td>ExcelkursAvancerad, inriktning inom rapportering. </td><td>2011</td>
+          <td>VBA 1Grunder i VBA hos Addskills Datum:</td>
+          <td> 28-30 jan 2012</td>
         </tr>
         <tr>
-          <td>Militärtjänstgöring I19/Boden, pansarskytt.</td><td>2003 =&gt;<br/>2004</td>
+          <td>ExcelkursAvancerad, inriktning inom rapportering. </td>
+          <td>2011</td>
         </tr>
         <tr>
-          <td>Uppland-Bro Gymnasieskola Samhällsvetenskaplig linje, inriktning ekonomi. </td><td>1999 =&gt;<br/>2002</td>
+          <td>Militärtjänstgöring I19/Boden, pansarskytt.</td>
+          <td>2003 =&gt;<br/>2004</td>
+        </tr>
+        <tr>
+          <td>Uppland-Bro Gymnasieskola Samhällsvetenskaplig linje, inriktning ekonomi. </td>
+          <td>1999 =&gt;<br/>2002</td>
         </tr>
       </table>
 
@@ -101,7 +113,9 @@
           <th>Arbetslivserfarenhet</th>
         </tr>
         <tr>
-          <th>Företag / avdelning:</th><th>Arbetssysslor:</th><th>Datum:</th>
+          <th>Företag / avdelning:</th>
+          <th>Arbetssysslor:</th>
+          <th>Datum:</th>
         </tr>
         <tr>
           <td>Dustin AB</td>
@@ -143,8 +157,13 @@
 
       <div class="other-merits">
         <p>
-          <strong>Övriga meriter:</strong>
-          Mitt modersmål är svenska och jag behärskar engelska. Är van att söka information och kunskap via databaser. Är förtrogen med Word, Excel, Dacsa, Monitor (affärssystem), AX Visual Studio samt andra informationsprogram. Under åren har jag haft mycket kontakt med olika supportavdelningar, kunder, leverantörer samt tillverkare. Jag har ägnat mycket tid åt att lösa problem, med att utnyttja olika tillverkarnas avtalsrabatter samt claim-rapportering. Har även coachat kundservicehandläggare och tagit statistik (Bonussystem).
+          <h3>Övriga meriter:</h3>
+          Mitt modersmål är svenska och jag behärskar engelska. Är van att söka information
+          och kunskap via databaser. Är förtrogen med Word, Excel, Dacsa, Monitor (affärssystem),
+          AX Visual Studio samt andra informationsprogram. Under åren har jag haft mycket kontakt
+          med olika supportavdelningar, kunder, leverantörer samt tillverkare. Jag har ägnat mycket
+          tid åt att lösa problem, med att utnyttja olika tillverkarnas avtalsrabatter samt
+          claim-rapportering. Har även coachat kundservicehandläggare och tagit statistik (Bonussystem).
           Har körkort för personbil samt tung motorcykel.
         </p>
       </div>
